# fastjwt

./: .docstr.yaml  .flake8  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  README.md  Taskfile.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.github/: SEMVER.md
.github/workflows/: cicd-documentation.yaml  cicd-publish.yaml  cicd-release.yaml  cicd-test.yaml  python-documentation.yaml  python-publish.yaml  python-release.yaml  python-test.yaml
api/config/: index.html
api/exceptions/: index.html
api/fastjwt/: index.html
api/request_token/: index.html
api/token_payload/: index.html
api/types/: index.html
callbacks/token/: index.html
callbacks/user/: index.html
ci/: changelog.py  commit_parser.py  commitparser.py  pre_commit_command.sh
claims/: index.html
config/: index.html
dependencies/aliases/: index.html
dependencies/bundle/: index.html
dependencies/injection/: index.html
dev/semver/: index.html
docs/: claims.md  config.md  deps.md  errors.md  fresh.md  index.md  locations.md  refresh.md
docs/api/: config.md  deps.md  exceptions.md  fastjwt.md  request_token.md  token_payload.md  types.md
docs/callbacks/: token.md  user.md
docs/dependencies/: aliases.md  bundle.md  deps.md  injection.md
docs/dev/: semver.md
docs/get-started/: base_usage.md  fresh.md  install.md  payload.md  payload_data.md  refresh.md  tutorial.md
docs/locations/: cookies.md  headers.md  json.md  query.md
errors/: index.html
examples/: base.py  request.sh
fastjwt/: __init__.py  _callback.py  _errors.py  callback.py  config.py  core.py  dependencies.py  errors.py  exceptions.py  fastjwt.py  models.py  payload.py  settings.py  token.py  types.py  utils.py
fastjwt/utils/: _getters.py  cookies.py  http.py  parsers.py  secrets.py
fresh/: index.html
get-started/base_usage/: index.html
get-started/fresh/: index.html
get-started/install/: index.html
get-started/payload/: index.html
get-started/payload_data/: index.html
get-started/refresh/: index.html
get-started/tutorial/: index.html
locations/: index.html
locations/cookies/: index.html
locations/headers/: index.html
locations/json/: index.html
locations/query/: index.html
refresh/: index.html
search/: search_index.json
tasks/: badges.Taskfile.yml  hooks.Taskfile.yml  serve.Taskfile.yml
tests/: test_app_scenarios.py  test_callback_handler.py  test_config.py  test_cookies.py  test_error_handler.py  test_fastjwt.py  test_getters.py  test_models.py  test_payload.py  test_token_getters.py  test_tokens.py  test_utils.py  utils_app.py
